[fix] Make the landing page scrollbar hidden

--- a/src/components/LandingPage/styles/Landingpage.scss
+++ b/src/components/LandingPage/styles/Landingpage.scss
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,700;1,400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Carrois+Gothic+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
+.LandingPage::-webkit-scrollbar { 
+    display: none;
+}
+
 .LandingPage {
     width: 100%;
     height: 100%;
@@ -8,6 +13,8 @@
     position: absolute;
     overflow-y: scroll;
     scroll-behavior: smooth;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 
     .heading {
         text-align: center;
